# packed-colony

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/src/: colony.rs
src/: lib.rs
